<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/last_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:text="@string/last_workout"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/last_workout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="608dp"
        android:text="@string/new_workout"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pullup3"
        android:layout_width="237dp"
        android:layout_height="33dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="296dp"
        android:text="@string/pullup_3set"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="94dp"
        android:layout_height="97dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="232dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_pullup" />

    <TextView
        android:id="@+id/pullup1"
        android:layout_width="237dp"
        android:layout_height="33dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="232dp"
        android:text="@string/pullup_1set"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pullup2"
        android:layout_width="237dp"
        android:layout_height="33dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="264dp"
        android:text="@string/pullup_2set"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/squat3"
        android:layout_width="237dp"
        android:layout_height="33dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="172dp"
        android:text="@string/squat_3set"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="94dp"
        android:layout_height="97dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="108dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_squat" />

    <TextView
        android:id="@+id/squat1"
        android:layout_width="237dp"
        android:layout_height="33dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="108dp"
        android:text="@string/squat_1set"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/squat2"
        android:layout_width="237dp"
        android:layout_height="33dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="140dp"
        android:text="@string/squat_2set"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dips1"
        android:layout_width="237dp"
        android:layout_height="33dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="356dp"
        android:text="@string/dips_1set"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dips3"
        android:layout_width="237dp"
        android:layout_height="33dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="420dp"
        android:text="@string/dips_3set"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dips2"
        android:layout_width="237dp"
        android:layout_height="33dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="388dp"
        android:text="@string/dips_2set"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="97dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="356dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_dips" />

    <EditText
        android:id="@+id/edit_exsetrep"
        android:layout_width="372dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="184dp"
        android:hint="@string/digite_exsetrep_ex_60_12_63_10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_save_workout"
        android:layout_width="284dp"
        android:layout_height="61dp"
        android:layout_marginBottom="92dp"
        android:text="@string/salvar_treino"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />
    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/newWorkoutButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="176dp"-->
<!--        android:layout_marginBottom="156dp"-->
<!--        android:clickable="true"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:srcCompat="@android:drawable/ic_menu_add" />-->
</androidx.constraintlayout.widget.ConstraintLayout>